# spidy

./: .editorconfig  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
components/ESP32Servo/: CMakeLists.txt
components/ESP32Servo/include/: ESP32Servo.h
components/bluetooth/: Adress.cpp  CMakeLists.txt  Device.cpp  GAPService.cpp  SPPService.cpp  bluetooth.cpp
components/bluetooth/include/: Address.hpp  Device.hpp  GAPService.hpp  SPPService.hpp  bluetooth.hpp
components/ps4/: CMakeLists.txt  ps4.c  ps4_int.h  ps4_l2cap.c  ps4_parser.c  ps4_spp.c
components/ps4/include/: ps4.h
components/pwm/: CMakeLists.txt  PWM.cpp  Servo.cpp
components/pwm/include/: PWM.hpp  Servo.hpp
main/: CMakeLists.txt  arduino_main.cpp  main.c  main.cpp  servos.cpp
main/include/: servos.hpp
